sort footer relative issue and spacing on type page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -117,6 +117,7 @@ input[type='number'].no-spin::-ms-clear {
   @apply relative z-10 flex justify-center items-center flex-col max-w-7xl mx-auto sm:px-16 px-6;
 }
 
+
 .black_btn {
   @apply rounded-full border border-black bg-black py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-sm font-inter flex items-center justify-center;
 }
@@ -134,7 +135,10 @@ input[type='number'].no-spin::-ms-clear {
 }
 
 .vessel_footer {
-  @apply bg-tb-white font-roboto text-tb-violet p-4 border-t border-dotted border-white w-full
+  @apply bg-tb-white font-roboto text-tb-violet p-4 border-t border-dotted border-white w-full;
+  position: relative;
+  bottom: 0;
+  left: 0;
 }
 
 .vessel_addresses {
